--- a/static/login.html
+++ b/static/login.html
@@ -3,14 +3,63 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <title>Login</title>
+    <title>Login to {{.title}}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="login.css" rel="stylesheet">
+    <style>
+      html,
+      body {
+        height: 100%;
+      }
+
+      body {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+
+      .form-login {
+        width: 100%;
+        max-width: 330px;
+        padding: 15px;
+        margin: auto;
+      }
+      .form-login .checkbox {
+        font-weight: 400;
+      }
+      .form-login .form-control {
+        position: relative;
+        box-sizing: border-box;
+        height: auto;
+        padding: 10px;
+        font-size: 16px;
+      }
+      .form-login .form-control:focus {
+        z-index: 2;
+      }
+      .form-login input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .form-login input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+    </style>
   </head>
   <body class="text-center">
     <form class="form-login" method="POST" action="/sso/login">
-      <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Please login to {{.title}}</h1>
+      {{if .description}}
+      <div class="alert alert-info text-left">
+        {{.description | html}}
+      </div>
+      {{end}}
       <label for="inputLogin" class="sr-only">Login</label>
       <input type="text" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
