--- a/static/forbidden.html
+++ b/static/forbidden.html
@@ -16,8 +16,14 @@
   <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
       <div class="container">
-        <h1 class="mt-5">Access forbidden</h1>
-        <p class="lead">You do not have permission to access this page.</p>
+        <div class="mt-5 alert alert-danger" role="alert">
+          <h4 class="alert-heading">Access forbidden</h4>
+          <p>You do not have permission to access <kbd>{{.page}}</kbd></p>
+          {{if .policies}}
+          <hr>
+          <p class="mb-0">To access this page you must have one of this policies: <b>{{.policies}}</b>.</p>
+          {{end}}
+        </div>
       </div>
     </main>
 </body>
