--- a/static/forbidden.html
+++ b/static/forbidden.html
@@ -19,10 +19,10 @@
       <div class="container">
         <div class="mt-5 alert alert-danger" role="alert">
           <h4 class="alert-heading">Access forbidden</h4>
-          <p>You do not have permission to access <kbd>{{.method}} {{.page}}</kbd></p>
-          {{if .policies}}
+          <p>You do not have permission to access <kbd>{{.request.method}} {{.request.path}}</kbd></p>
+          {{if .request.policies}}
           <hr>
-          <p class="mb-0">To access this page you must have one of this policies: <b>{{.policies}}</b>.</p>
+          <p class="mb-0">To access this page you must have one of this policies: <b>{{.request.policies}}</b>.</p>
           {{end}}
         </div>
       </div>
