--- a/static/forbidden.html
+++ b/static/forbidden.html
@@ -18,7 +18,7 @@
     <main role="main" class="flex-shrink-0">
       <div class="container">
         <div class="mt-5 alert alert-danger" role="alert">
-          <h4 class="alert-heading">Access forbidden</h4>
+          <h1 class="h3 alert-heading">Access forbidden</h1>
           <p>You do not have permission to access <kbd>{{.request.method}} {{.request.path}}</kbd></p>
           {{if .accessItem.Policies}}
           <hr>
