--- a/static/logout.html
+++ b/static/logout.html
@@ -7,6 +7,14 @@
     <meta name="author" content="Lev Aminov">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
+      body {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+      }
       .container {
         width: auto;
         max-width: 680px;
@@ -17,7 +25,7 @@
   <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
       <div class="container">
-        <h1 class="mt-5">Logout</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Logout</h1>
         <p class="lead">You are now logged out.</p>
         <p>Didn't mean to log out? <a href="{{.vars.login}}">Log in again</a>.</p>
       </div>
